--- a/TCSOffice.Presentation.Web/Web.config
+++ b/TCSOffice.Presentation.Web/Web.config
@@ -16,6 +16,9 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="fromEmail" value="kapoorshefali2@gmail.com" />
+    <add key="fromPassword" value="Ben10@$$$$" />
+    <add key="basePath" value="http://localhost:65388/"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
