--- a/TCSOffice.Business.Domain/TCSOffice.Business.Domain.csproj
+++ b/TCSOffice.Business.Domain/TCSOffice.Business.Domain.csproj
@@ -38,6 +38,10 @@
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -65,6 +69,14 @@
     <Compile Include="Entity\Company.cs" />
     <Compile Include="Entity\Login.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities\Data\Operators.cs" />
+    <Compile Include="Utilities\Data\Predicate.cs" />
+    <Compile Include="Utilities\Extensions\DynamicPredicates.cs" />
+    <Compile Include="Utilities\Extensions\EntityExtensions.cs" />
+    <Compile Include="Utilities\Extensions\ReflectionExtensions.cs" />
+    <Compile Include="Utilities\Extensions\StringExtensions.cs" />
+    <Compile Include="Utilities\Helpers\JsonHelpers.cs" />
+    <Compile Include="Utilities\Helpers\Mail.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
