--- a/TCSOffice.Presentation.Web/packages.config
+++ b/TCSOffice.Presentation.Web/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="bootstrap" version="3.0.0" targetFramework="net45" />
   <package id="Castle.Core" version="4.2.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net45" />
@@ -7,6 +8,7 @@
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.4" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.4" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.4" targetFramework="net45" />
@@ -26,4 +28,5 @@
   <package id="Ninject.Web.WebApi" version="3.3.0" targetFramework="net45" />
   <package id="Ninject.WebApi.DependencyResolver" version="0.1.4758.24814" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net45" />
+  <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
