--- a/TCSOffice.Presentation.Web/packages.config
+++ b/TCSOffice.Presentation.Web/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
+  <package id="Antlr3.Runtime" version="3.5.1" targetFramework="net45" />
   <package id="bootstrap" version="3.0.0" targetFramework="net45" />
   <package id="Castle.Core" version="4.2.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net45" />
@@ -28,5 +29,5 @@
   <package id="Ninject.Web.WebApi" version="3.3.0" targetFramework="net45" />
   <package id="Ninject.WebApi.DependencyResolver" version="0.1.4758.24814" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net45" />
-  <package id="WebGrease" version="1.5.2" targetFramework="net45" />
+  <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
