--- a/TCSOffice.Business.Domain/TCSOffice.Business.Domain.csproj
+++ b/TCSOffice.Business.Domain/TCSOffice.Business.Domain.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Core\ResponseFactory.cs" />
     <Compile Include="Core\SystemData.cs" />
     <Compile Include="Core\UnitOfWork.cs" />
+    <Compile Include="Dto\CompanyDto.cs" />
     <Compile Include="Dto\LoginViewModel.cs" />
     <Compile Include="Entity\Company.cs" />
     <Compile Include="Entity\Login.cs" />
