--- a/TCSOffice.Presentation.Web/TCSOffice.Presentation.Web.csproj
+++ b/TCSOffice.Presentation.Web/TCSOffice.Presentation.Web.csproj
@@ -124,6 +124,9 @@
       <HintPath>..\packages\Microsoft.AspNet.WebApi.WebHost.5.2.4\lib\net45\System.Web.Http.WebHost.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Web.Optimization, Version=1.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Web.Optimization.1.1.3\lib\net40\System.Web.Optimization.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.Routing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Drawing" />
@@ -169,19 +172,14 @@
     <Content Include="Assets\css\bootstrap-responsive.min.css" />
     <Content Include="Assets\css\bootstrap.min.css" />
     <Content Include="Assets\css\font-awesome.min.css" />
-    <Content Include="Assets\css\jquery.dataTables.min.css" />
     <Content Include="Assets\font\fontawesome-webfont.svg" />
-    <Content Include="Assets\images\sort_asc.png" />
-    <Content Include="Assets\images\sort_asc_disabled.png" />
-    <Content Include="Assets\images\sort_both.png" />
-    <Content Include="Assets\images\sort_desc.png" />
-    <Content Include="Assets\images\sort_desc_disabled.png" />
+    <Content Include="Assets\js\ace-elements.min.js" />
     <Content Include="Assets\js\ace-extra.min.js" />
-    <Content Include="Assets\js\angular-datatables.js" />
-    <Content Include="Assets\js\angular.js" />
+    <Content Include="Assets\js\ace.min.js" />
     <Content Include="Assets\js\bootstrap.min.js" />
     <Content Include="Assets\js\jquery-2.0.3.min.js" />
-    <Content Include="Assets\js\jquery.dataTables.js" />
+    <Content Include="Assets\js\jquery.dataTables.bootstrap.js" />
+    <Content Include="Assets\js\jquery.dataTables.min.js" />
     <Content Include="Assets\js\jquery.js" />
     <Content Include="Assets\js\jquery.mobile.custom.min.js" />
     <Content Include="Assets\js\main.js" />
@@ -219,10 +217,10 @@
     <Content Include="TCSOffice\Pages\Customer\Services\tcHomeService.js" />
     <Content Include="TCSOffice\Pages\Home\home.html" />
     <Content Include="TCSOffice\Pages\Home\home.js" />
-    <Content Include="TCSOffice\TCSOfficeApp.routes.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\NinjectWebCommon.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
@@ -257,6 +255,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Assets\images\" />
     <Folder Include="Assets\img\" />
     <Folder Include="Models\" />
     <Folder Include="TCSOffice\Components\" />
