--- a/TCSOffice.Presentation.Web/packages.config
+++ b/TCSOffice.Presentation.Web/packages.config
@@ -17,8 +17,6 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net45" developmentDependency="true" />
-  <package id="Microsoft.ReportViewer.Common" version="10.0.40219.1" targetFramework="net45" />
-  <package id="Microsoft.ReportViewer.WebForms.v12" version="12.0.0.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
@@ -30,6 +28,7 @@
   <package id="Ninject.Web.Common.WebHost" version="3.3.0" targetFramework="net45" />
   <package id="Ninject.Web.WebApi" version="3.3.0" targetFramework="net45" />
   <package id="Ninject.WebApi.DependencyResolver" version="0.1.4758.24814" targetFramework="net45" />
+  <package id="Rotativa" version="1.7.3" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
