--- a/TCSOffice.Presentation.Web/TCSOffice.Presentation.Web.csproj
+++ b/TCSOffice.Presentation.Web/TCSOffice.Presentation.Web.csproj
@@ -268,6 +268,7 @@
     <Content Include="Views\Account\ActivateCompanyFromEmail.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Customer\CustomerViewAsPdf.cshtml" />
+    <Content Include="Views\Home\CustomerViewAsPdf.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
