--- a/TCSOffice.Business.DataAccess/TCSOffice.Business.DataAccess.csproj
+++ b/TCSOffice.Business.DataAccess/TCSOffice.Business.DataAccess.csproj
@@ -61,6 +61,10 @@
     <Compile Include="Migrations\201804161725333_email id unique.Designer.cs">
       <DependentUpon>201804161725333_email id unique.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201805071813509_dailySalesReports.cs" />
+    <Compile Include="Migrations\201805071813509_dailySalesReports.Designer.cs">
+      <DependentUpon>201805071813509_dailySalesReports.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TCSOfficeDbContext.cs" />
@@ -84,6 +88,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201804161725333_email id unique.resx">
       <DependentUpon>201804161725333_email id unique.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805071813509_dailySalesReports.resx">
+      <DependentUpon>201805071813509_dailySalesReports.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
