--- a/TCSOffice.Business.Domain/TCSOffice.Business.Domain.csproj
+++ b/TCSOffice.Business.Domain/TCSOffice.Business.Domain.csproj
@@ -66,9 +66,12 @@
     <Compile Include="Core\SystemData.cs" />
     <Compile Include="Core\UnitOfWork.cs" />
     <Compile Include="Dto\CompanyDto.cs" />
+    <Compile Include="Dto\CustomerDto.cs" />
     <Compile Include="Dto\jQueryDataTableParamModel.cs" />
     <Compile Include="Dto\LoginViewModel.cs" />
+    <Compile Include="Dto\Response.cs" />
     <Compile Include="Entity\Company.cs" />
+    <Compile Include="Entity\Customer.cs" />
     <Compile Include="Entity\Login.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\Data\Operators.cs" />
